# comfyui-workflow-diff

./: .gitignore  LICENSE  README.md  __init__.py  format_adapter.py  layout.py  pyproject.toml  widget_names.py  workflow_api_adapter.py  workflow_converter.py  workflow_diff.py  workflow_renderer.py
docs/: DEVELOPMENT.md
tests/: conftest.py  pytest.ini  render_gallery.py  test_format_combos.py
tests/fixtures/toy/: README.md  after_api.json  after_ui.json  before_api.json  before_ui.json
